# comic-downloader

./: AGENTS.md  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  uno.config.ts
.github/workflows/: Android-SmokeTest.yml  Publish-Android.yml
src/: App.vue  AppContent.vue  bindings.ts  main.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: commands.rs  config.rs  lib.rs  logger.rs
src/components/: DownloadAllFavoriteButton.vue  IconButton.vue  MobileDownloadBar.vue
src/composables/: useLongPress.ts
src/dialogs/: AboutDialog.vue  LogDialog.vue  LoginDialog.vue  SettingsDialog.vue
src/panes/: ChapterPane.vue  FavoritePane.vue  SearchPane.vue  WeeklyPane.vue
src/panes/DownloadedPane/: DownloadedPane.vue
src/panes/DownloadedPane/components/: UpdateDownloadedComicsButton.vue
src/panes/ProgressesPane/: ProgressesPane.vue
src/panes/ProgressesPane/components/: ExportProgresses.vue  UncompletedProgresses.vue
