[package]
name = "jmcomic-downloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jmcomic_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = { version = "2" }
tauri-plugin-dialog = { version = "2" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
yaserde = { version = "0.12.0", features = ["yaserde_derive"] }

specta = { version = "2.0.0-rc", features = ["serde_json"] }
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta-typescript = { version = "0.0.7" }

reqwest = { version = "0.12.15", default-features = false, features = ["json", "cookies", "rustls-tls"] }
reqwest-retry = { version = "0.6.1" }
reqwest-middleware = { version = "0.3.3" }

base64 = { version = "0.22" }
md5 = { version = "0.7.0" }
aes = { version = "0.8.4" }

anyhow = { version = "1" }
tokio = { version = "1.40.0", features = ["full"] }
bytes = { version = "1.7.2" }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp"] }
lopdf = { git = "https://github.com/lanyeeee/lopdf", features = ["embed_image_jpeg", "embed_image_png", "embed_image_webp"] }
flate2 = { version = "1.0.34" }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
rayon = { version = "1.10.0" }
uuid = { version = "1.15.1", features = ["v4"] }
zip = { version = "2.2.3", default-features = false }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["json", "time"] }
tracing-appender = { version = "0.2.3" }
strfmt = { version = "0.2.4" }
walkdir = { version = "2.5.0" }
indexmap = { version = "2.10.0" }

[target.'cfg(not(target_os = "android"))'.dependencies]
notify = { version = "8.0.0" }
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }

[target.'cfg(target_os = "android")'.dependencies]
# boot_diag 直接用 NDK __android_log_write(FFI) 输出 logcat，不依赖 android_logger，
# 避免它设置 `log` 全局 logger 与 tracing_subscriber 的 try_init 冲突。
# log crate 仍保留：tracing-log 桥接 log facade 时需要。
log = "0.4"

# 诊断阶段：暂时关闭 strip / lto / panic=abort。
# - panic=abort 会让 panic 直接终止进程且无回溯，无法定位 Rust run() 失败点。
# - strip 会剥掉符号，panic 堆栈不可读。
# 待白屏根因定位后再恢复。
[profile.release]
strip = false
lto = false
codegen-units = 16
panic = "unwind"
